// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`flatten-tests > flattened media queries 1`] = `
"const __ReactNativeStyleSheet = require('react-native').StyleSheet;
const _sheet = __ReactNativeStyleSheet.create({
  "0": {
    "flexDirection": "column",
    "transform": [{
      "translateY": 10
    }, {
      "translateX": 20
    }, {
      "rotate": "10deg"
    }]
  },
  "1": {
    "borderTopLeftRadius": 10,
    "borderTopRightRadius": 10,
    "borderBottomRightRadius": 10,
    "borderBottomLeftRadius": 10,
    "transform": [{
      "scale": 2
    }]
  },
  "2": {
    "backgroundColor": "red"
  },
  "3": {
    "backgroundColor": "blue"
  }
});
import { _withStableStyle } from '@tamagui/core';
const __ReactNativeView = require('react-native').View;
const __ReactNativeText = require('react-native').Text;
import { YStack } from 'tamagui';
import { useMedia } from 'tamagui';
export function Test(isLoading) {
  const media = useMedia();
  return <_ReactNativeViewStyled0 _expressions={[!!media.sm, !!(media.sm && isLoading), !!(media.sm && !isLoading)]} />;
}
const _ReactNativeViewStyled0 = _withStableStyle(__ReactNativeView, (theme, _expressions) => [_sheet["0"], _expressions[0] ? _sheet["1"] : null, _expressions[1] ? _sheet["2"] : null, _expressions[2] ? _sheet["3"] : null], false, false);"
`;

exports[`flatten-tests > work with experimentalFlattenThemesOnNative + ternary 1`] = `
"import { _withStableStyle } from '@tamagui/core';
const __ReactNativeView = require('react-native').View;
const __ReactNativeText = require('react-native').Text;
import { View } from 'tamagui';
export function Test() {
  return <_ReactNativeViewStyled0 _expressions={[!!showBackground]} />;
}
const _ReactNativeViewStyled0 = _withStableStyle(__ReactNativeView, (theme, _expressions) => [_expressions[0] ? {
  "backgroundColor": theme.color1.get()
} : {
  "backgroundColor": theme.color2.get()
}], true, false);"
`;

exports[`flatten-tests > work with experimentalFlattenThemesOnNative 1`] = `
"const __ReactNativeStyleSheet = require('react-native').StyleSheet;
const _sheet = __ReactNativeStyleSheet.create({
  "0": {
    "flexDirection": "column",
    "transform": [{
      "translateY": 10
    }, {
      "translateX": 20
    }, {
      "rotate": "10deg"
    }]
  }
});
import { _withStableStyle } from '@tamagui/core';
const __ReactNativeView = require('react-native').View;
const __ReactNativeText = require('react-native').Text;
import { YStack } from 'tamagui';
export function Test(isLoading) {
  return <_ReactNativeViewStyled0 />;
}
const _ReactNativeViewStyled0 = _withStableStyle(__ReactNativeView, (theme, _expressions) => [_sheet["0"], {
  "backgroundColor": theme.background.get()
}], true, false);"
`;
